--- a/euro.html
+++ b/euro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="euro.css">
 </head>
 <body>
     <div id="control">
@@ -129,7 +130,6 @@
         divcontent.appendChild(divchave);
 
     }
-
 
     function comparenumbers(a,b) {
         return (a-b);
